--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "agendapp",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mongoose": "^8.13.2"
   },
   "devDependencies": {
